--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "jsx": "react"
+    "esModuleInterop": true
   },
   "extends": "expo/tsconfig.base"
 }
