--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-expo": "^1.1.8",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.79",
     "expo": "~51.0.9",
     "expo-auth-session": "^5.5.2",
@@ -20,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "^4.10.3",
     "typescript": "~5.3.3"
   },
