--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@types/react": "~18.2.79",
     "expo": "~51.0.9",
     "expo-auth-session": "^5.5.2",
+    "expo-secure-store": "^13.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
     "react": "^18.3.1",
